# fcompiler

./: .gitignore  .luarc.json  Cargo.toml  Makefile.toml  README.md
scripts/signals/: dl_dump.sh  main.lua
src/: main.rs
src/lib/: asm.rs  ast.rs  codegen.rs  error.rs  mem.rs  mod.rs  parser.rs  philosophy.rs  symbol.rs
src/lib/backend/: asm.rs  codegen.rs  ir.rs  low.rs  mem.rs  mod.rs  symbol.rs  tags.rs
src/lib/backend/asm/: emit.rs  ir.rs  label.rs  mod.rs
src/lib/frontend/: ast.rs  lexemes.rs  mod.rs  parser.rs  token.rs
src/lib/game/: mod.rs  signals.rs
test/: break.fac  cast.fac  cond.fac  for.fac  general.fac  input.fcpu  loop.fac  program.ffc  scope.fac  unary.fac  while.fac
