[package]
name = "fcompiler"
version = "0.1.0"
edition = "2024"

[lib]
name = "lib"
path = "./src/lib/mod.rs"

[dependencies]
strum = "0.27.2"
strum_macros = "0.27.2"
clap = { version = "4.5.37", features = ["color", "help", "usage", "derive"] }
lazy_static = "1.5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
colored = "3.1.1"
derive_builder = "0.20.2"
